# customer-service-agent

./: .env.example  .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml  system_prompt.example.txt
.trellis/: .template-hashes.json
customer_service_agent/: admin_server.py  ai_assist.py  chunking.py  cli.py  config.py  db.py  document_parser.py  faq_loader.py  import_ai.py  import_dedupe.py  import_models.py  import_questions.py  llm.py  markdown_import.py  mcp_server.py  rag.py  rag_tool.py  retrieval.py  wechat_client.py  wechat_service.py
customer_service_agent/db/: __init__.py  analytics.py  base.py  builders.py  faq.py  imports.py  knowledge.py  models.py  retrieval_meta.py
customer_service_agent/static/: admin.css  admin.html  admin.js
docs/references/: mineru-third-party-api-parser.md  ragflow-mineru-knowledge-graph-notes.md
scripts/: install_user_service.sh  screenshot.py
sql/: 001_init.sql
systemd/: customer-service-agent.service.template
tests/: test_admin_data_model.py  test_admin_security.py  test_admin_server.py  test_admin_table_layout.py  test_ai_assist.py  test_chunking.py  test_cli.py  test_config.py  test_db.py  test_document_parser.py  test_faq_loader.py  test_import_ai.py  test_import_dedupe.py  test_import_models.py  test_llm.py  test_markdown_import.py  test_mcp_server.py  test_rag.py  test_rag_tool.py  test_repository_hygiene.py  test_retrieval.py  test_systemd_template.py  test_wechat_client.py  test_wechat_service.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: App.css  (+3 more)
(+178 files in other folders)
